# Cursor_Sahil

./: .gitignore  A3CY135B.xlsx  Holoscan_slide_speaker_notes.md  README.md  README_Holoscan_AGX_Thor_Agilex5_Bringup.md  ag3-srw-v1-1.xlsm  ag3-srw-v1-1_Updated.xlsm  ag3_schematic_review.xlsm  pyproject.toml
examples/: simulate_link.py
fpga-ai-suite-guides/: fpga_ai_suite_windows_linux_installation_guide.md
hdl/: Makefile  README.md  tb_psk8_modem.vcd
hdl/constraints/: psk8_modem_500mhz.sdc
hdl/reports/: timing_analysis.md
hdl/rtl/: README.md  nco_rotator.v  nco_rotator_8x.v  psk8_demapper.v  psk8_mapper.v  psk8_modem_quartus_top.v  psk8_modem_top.v  psk8_rx.v  psk8_tx.v  srrc_fir.v  srrc_fir_8x.v
hdl/synth/: yosys_synth_sanity.ys  yosys_xcup_synth.ys
hdl/synth/quartus/: psk8_modem_500mhz.sdc  psk8_modem_agilex7.qpf  psk8_modem_agilex7.qsf  run_quartus_compile.tcl
hdl/synth/vivado/: psk8_modem_500mhz.xdc  run_vivado_pnr.tcl
hdl/tb/: tb_psk8_modem.v
src/eight_psk_modem/: __init__.py  channel.py  config.py  mapping.py  modem.py  prbs.py  srrc.py
tests/: test_eight_psk_modem.py
