[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "eight-psk-modem"
version = "0.1.0"
description = "Reference 8-PSK modem design for PRBS31 at 3 Gbps and 4 GSPS ADC/DAC rates"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
]

[tool.setuptools.packages.find]
where = ["src"]

